fix issue on my phone: subtitle not visible in horizontal position

--- a/_sass/layout/_containers.scss
+++ b/_sass/layout/_containers.scss
@@ -6,6 +6,9 @@
     margin-top: 40px;
     margin-bottom: 40px;
   }
+  @include mq('sm') {
+    margin-top: 30px;
+  }
 }
 
 .content {
